White space eliminated, image border-radius fixed

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -46,13 +46,16 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+html, body {
+    width: 100%;
+    display: table;
+}
 
 /*
   ========================================
   Header
   ========================================
 */
-
 header{
     border-bottom: 3px solid #cccccc;
     background-color: #ffffff;
@@ -64,7 +67,7 @@ header{
   }  
 .nav-main{
     font-family: 'Georgia', Times, 'Times New Roman', serif;
-    color: white;
+    color: #ffffff;
     font-weight: bold;
     background-color: #4aaaa5;
     padding: 30px 40px;
@@ -98,7 +101,8 @@ li a {
     font-size: 20px;
 }
 li a:hover {
-    background-color: #f1f1f1;
+    background-color: #4aaaa5;
+    color: #ffffff;
 }
 
 /*
@@ -113,6 +117,7 @@ li a:hover {
     min-height : calc(100vh - 42px);
     background-image : url("../Images/pattern.png");
     background-repeat : repeat;
+    background-size:100% 100%;
     }
 .container-center {
     width: 960px;
@@ -142,7 +147,7 @@ h2{
 */
 .About-Pic{
     border-radius:10%;
-    padding: 20px 20px 0 40px;
+    margin: 20px 20px 0 40px;
     width: 250px;
     height:250px;
     float: left;
@@ -155,7 +160,6 @@ h2{
     padding: 15px 40px 0px 40px;
     text-align: justify;
     text-justify: inter-word;
-
 }
 
 /*
